changes title Exploiting Directly-Attached NVMe Arrays in DBMS

--- a/cidr2020/program.html
+++ b/cidr2020/program.html
@@ -222,7 +222,7 @@
         <h3 class="session-title">Session 4 </h3>
         <span class="session-location">(Room: Matterhorn Theater)</span>
         <span class="session-time">9:00 - 09:20</span>
-        <span class="session-talk"> Exploiting Directly-Attached NAND Arrays in DBMS</span>
+        <span class="session-talk"> Exploiting Directly-Attached NVMe Arrays in DBMS</span>
         <span class="session-presenter">Gabriel Haas (Friedrich Schiller University Jena)*; Michael Haubenschild (Tableau Software); Viktor Leis (Friedrich Schiller University Jena)</span>
         
          <span class="session-time">9:20 - 09:40</span>
